syntax = "proto3";

package grpc;

option go_package = "./proto";

service Pozo{
	// Env√≠a el monto total acumulado
	rpc Amount(AmountReq) returns (AmountResp);
}

message AmountReq{}

message AmountResp{
  	int32 valor = 1;
}